# Dynasty

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  initialize-project.sh
.github/workflows/: ci.yml  deploy.yml
calibration/: README.md  requirements.txt
core/: CMakeLists.txt  build-wasm.sh  build.sh
core/include/: engine.hpp  parameters.hpp  state.hpp
core/src/: engine.cpp  state.cpp  wasm_bindings.cpp
docs/guides/: getting_started.md
frontend/: .env.local.example  README.md  next.config.js  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useSimulation.ts
frontend/src/lib/: engine-bridge.ts  narrative-generator.ts  types.ts  wasm-loader.ts
scripts/: benchmark.sh  deploy-vercel.sh  run-tests.sh  setup-dev.sh
